Groovy fixes